--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <div id="mainContent" class="hidden">
   <!-- Container for the login form -->
   <div class="container">
-	      <div class="header">
-      <img src="images/icon-192x192.png" alt="Logo" class="logo">
-    </div>
     <!-- Login Section -->
     <div id="loginSection" class="hidden"> <!-- Add hidden class -->
+	    <div class="header-row">
+        <img src="images/icon-192x192.png" alt="Logo" class="logo">
+      </div>
       <h2>Login</h2>
       <div class="error" id="error"></div>
       <form id="loginForm">
@@ -41,6 +41,7 @@
     <!-- Dashboard Section -->
     <div id="dashboardSection" class="hidden">
       <div class="header-row">
+        <img src="images/icon-192x192.png" alt="Logo" class="logo">
         <h2>Welcome, <span id="userEmail"></span>!</h2>
         <a href="javascript:void(0);" onclick="logout()" class="logout-icon" title="Logout">
           <i class="fas fa-right-from-bracket"></i>
