--- a/party-info.html
+++ b/party-info.html
@@ -106,18 +106,16 @@ input[readonly] {
       <!-- NEW WRAPPER for all visible content -->
   <div id="mainContent" class="hidden">
     <div class="container">
-	    <div class="header">
-        <img src="images/icon-192x192.png" alt="Logo" class="logo">
-      </div>
       <div class="header-row">
+	      <img src="images/icon-192x192.png" alt="Logo" class="logo">
         <h2>Party Info</h2>
 	      <a href="javascript:void(0);" onclick="logout()" class="logout-icon" title="Logout">
           <i class="fas fa-right-from-bracket"></i>
         </a>
       </div>
 
-	    <a href="javascript:void(0);" onclick="goToDashboard()" class="back-icon" title="Back to Dashboard">
-        <i class="fas fa-backward"></i>
+	    <a href="javascript:void(0);" onclick="goToDashboard()" class="home-icon" title="Back to Dashboard">
+        <i class="fas fa-home-user"></i>
       </a>
 <div id="app">
 <div id="status-message" style="margin: 10px 0; color: green;"></div>
