--- a/party-info.html
+++ b/party-info.html
@@ -109,14 +109,17 @@ input[readonly] {
       <div class="header-row">
 	      <img src="images/icon-192x192.png" alt="Logo" class="logo">
         <h2>Party Info</h2>
+	      <div class="icon-group">
 	      <a href="javascript:void(0);" onclick="logout()" class="logout-icon" title="Logout">
           <i class="fas fa-right-from-bracket"></i>
         </a>
-      </div>
-
-	    <a href="javascript:void(0);" onclick="goToDashboard()" class="home-icon" title="Back to Dashboard">
+		      	    <a href="javascript:void(0);" onclick="goToDashboard()" class="home-icon" title="Back to Dashboard">
         <i class="fas fa-home-user"></i>
       </a>
+      </div>
+      </div>
+
+
 <div id="app">
 <div id="status-message" style="margin: 10px 0; color: green;"></div>
               <div class="form-group">
