--- a/party-info.html
+++ b/party-info.html
@@ -156,7 +156,7 @@ input[readonly] {
 <div id="party-details" class="container" style="display: none;">
    <div class="header-row">
     <a href="javascript:void(0);" onclick="goBackToSearch()" class="back-icon" title="Back to Search Results">
-    <i class="fas fa-circle-arrow-left"></i>
+    <i class="fas fa-arrow-left"></i>
   </a>
   
     <a href="javascript:void(0);" onclick="editParty()" class="edit-icon" id="edit-btn" title="Edit">
