--- a/party-info.html
+++ b/party-info.html
@@ -107,13 +107,11 @@ input[readonly] {
   <div id="mainContent" class="hidden">
     <div class="container">
       <div class="header-row">
-	      <img src="images/icon-192x192.png" alt="Logo" class="logo">
+        <a href="javascript:void(0);" onclick="goToDashboard()" class="home-icon" title="Home">
+        <img src="images/icon-192x192.png" alt="Logo" class="logo">
+      </a>
         <h2>Party Info</h2>
 	      <div class="icon-group">
-
-		      	    <a href="javascript:void(0);" onclick="goToDashboard()" class="home-icon" title="Back to Dashboard">
-        <i class="fas fa-home-user"></i>
-      </a>
 		      	      <a href="javascript:void(0);" onclick="logout()" class="logout-icon" title="Logout">
           <i class="fas fa-right-from-bracket"></i>
         </a>
