--- a/party-info.html
+++ b/party-info.html
@@ -331,6 +331,7 @@
       }
     </style>
 
+    <script src="config.js"></script>
     <script src="script.js"></script>
     <script src="auth.js"></script>
     <script>
@@ -454,7 +455,7 @@
         params.append('action', 'getPartyList');
         params.append('token', token);
 
-        fetch(ENV_CONFIG.SCRIPT_URL) {
+        fetch(ENV_CONFIG.SCRIPT_URL, {
           method: 'POST',
           headers: {
             'Content-Type': 'application/x-www-form-urlencoded'
@@ -640,7 +641,7 @@
 
         showLoader();
 
-        fetch(ENV_CONFIG.SCRIPT_URL) {
+        fetch(ENV_CONFIG.SCRIPT_URL, {
           method: "POST",
           headers: { "Content-Type": "application/x-www-form-urlencoded" },
           body: params.toString()
@@ -659,7 +660,7 @@
               showDuplicateConfirmation(() => {
                 params.append("confirmDuplicate", true);
                 showLoader();
-                fetch(ENV_CONFIG.SCRIPT_URL) {
+                fetch(ENV_CONFIG.SCRIPT_URL, {
                   method: "POST",
                   headers: { "Content-Type": "application/x-www-form-urlencoded" },
                   body: params.toString()
@@ -786,7 +787,7 @@
 
         showLoader();
 
-        fetch(ENV_CONFIG.SCRIPT_URL) {
+        fetch(ENV_CONFIG.SCRIPT_URL, {
           method: "POST",
           headers: { "Content-Type": "application/x-www-form-urlencoded" },
           body: params.toString()
@@ -803,7 +804,7 @@
               showDuplicateConfirmation(() => {
                 params.append("confirmDuplicate", true);
                 showLoader();
-                fetch(ENV_CONFIG.SCRIPT_URL) {
+                fetch(ENV_CONFIG.SCRIPT_URL, {
                   method: "POST",
                   headers: { "Content-Type": "application/x-www-form-urlencoded" },
                   body: params.toString()
