--- a/party-info.html
+++ b/party-info.html
@@ -163,7 +163,7 @@
               <i class="fas fa-arrow-left"></i>
             </a>
 
-            <a href="javascript:void(0);" onclick="editParty()" class="edit-icon" id="edit-btn" title="Edit">
+            <a href="javascript:void(0);" onclick="editParty()" class="edit-icon" id="edit-btn" style="display: none;" title="Edit">
               <i class="fas fa-pen-to-square"></i>
             </a>
           </div>
