--- a/party-info.html
+++ b/party-info.html
@@ -525,8 +525,11 @@
           const canEdit = (role === 'Editor' || role === 'Admin');
           console.log(role);
           console.log(canEdit);
-          document.getElementById("edit-btn")?.style.display = canEdit ? "inline-block" : "none";
-          
+          if (role === 'Editor' || role === 'Admin') {
+            document.getElementById("edit-btn")?.style.display = "inline-block";
+          } else {
+            document.getElementById("edit-btn")?.style.display = "none";
+          }
         } else {
           console.error("Party not found.");
         }
