--- a/party-info.html
+++ b/party-info.html
@@ -526,9 +526,9 @@
           console.log(role);
           console.log(canEdit);
           if (role === 'Editor' || role === 'Admin') {
-            document.getElementById("edit-btn")?.style.display = "inline-block";
+            document.getElementById("edit-btn").style.display = "inline-block";
           } else {
-            document.getElementById("edit-btn")?.style.display = "none";
+            document.getElementById("edit-btn").style.display = "none";
           }
         } else {
           console.error("Party not found.");
